add update record functionality

--- a/student/static/student/css/style.css
+++ b/student/static/student/css/style.css
@@ -28,7 +28,7 @@
 }
 .student_edit_view_form_ctn {
     width: 70%;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     margin: auto;
 }
 
